change folder name

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/harp/bin/harp compile . dist",
-    "serve": "node_modules/harp/bin/harp server"
+    "build": "node_modules/harp/bin/harp compile src dist",
+    "serve": "node_modules/harp/bin/harp server src"
   },
   "author": "0verseas",
   "license": "MIT",
